--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-witdh" , initial-scale="1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Recomendação de Pratos Típicos brasileiros</title>
+    <title>Recomendação de Tênis</title>
 </head>
 
 
 <body>
-    <header>Pratos típicos brasileiros</header>
+    <header>Modelos de tênis</header>
     <section>
         <div>
-            <h1>Sugestões de pratos típicos brasileiros por estados</h1>
-            <h2> Paraná</h2>
-            <p>Carne de Onça</p>
+            <h1>Sugestões de tênis por estilo</h1>
+            <h2> Vans Knu skool</h2>
+            <p> Adidas Campus 00s</p>
         </div>
         <div>
            AQUI VAI UM VÍDEO
